Cadastrando solicitação de benefício com a data atual (e já listando na tela de solicitações do estudante)

--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -38,6 +38,7 @@
             </table>
         </div>
     </div>
+</div>
     <!-- Modal -->
     <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
         <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog">
