--- a/application/views/scripts/cadastro-estudante/index.phtml
+++ b/application/views/scripts/cadastro-estudante/index.phtml
@@ -67,25 +67,23 @@
                                 <input type="file" class="form-control" id="comprovanteMatricula" placeholder="Anexe o comprovante de matrícula">
                             </div>
                             <div class="form-group">
+                                
                                 <label for="exampleInputPassword1">Selecione o benefício:</label>
-
-
-                                <div class="custom-control custom-checkbox verificacheckbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1" onClick="verificacheckbox()">
-                                    <label class="custom-control-label" id="nenhum" for="customCheck1">Nenhum</label>
+                                <div class="custom-control custom-radio">
+                                    <input id="nenhum" name="beneficio" type="radio" value="0" checked="true"/>
+                                    <label> Nenhum </label>
                                 </div>
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck2">
-                                    <label class="custom-control-label" id="meiaPassagem" for="customCheck2">Meia Passagem</label>
+                                <div class="custom-control custom-radio">
+                                    <input id="meiaPassagem" name="beneficio" type="radio" value="1" /> 
+                                    <label> Meia Passagem </label>
                                 </div>
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck3">
-                                    <label class="custom-control-label" id="isencao" for="customCheck3">Isenção</label>
+                                <div class="custom-control custom-radio">
+                                    <input id="isencao" name="beneficio" type="radio" value="2" />
+                                    <label> Isenção </label>
                                 </div>
                                 <p id="mensagem4" style="color:red" ></p>
-
+                                
                             </div>
-
                             <p id="mensagem" style="color:red" ></p>
                             <button type="button" id="cadastro" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
                             <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
