Data em formato brasileiro

--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -55,7 +55,8 @@
         <div style="margin-top: 5%;">
             <?php echo $this->layout()->content; ?>
         </div>
-
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/moment.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/pt-br.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
