--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -71,6 +71,7 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
         <!--<script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>-->
         <?= $this->headScript(); ?>
     </body>
