Mais algumas alterações nos arquivos css e demais arquivos relacionados ao gerente de RH

--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -10,10 +10,10 @@
         <!-- Div para o corpo da página! -->
         <div class="col-lg-12" style="padding: 0px;">
             <div class="card" style="background-color:rgba(0,0,0,0.5);">
-                <div class="container">
-                    <form action="/html/tags/html_form_tag_action.cfm">
+                <div class="container labelsForm">
+                    <form>
                         <!-- Conjunto de divs-linha para cada campo do form-->
-                        
+                        <div class="col">
                         <h6>Do cargo</h6>
                         <Center>    
                         <div class="form-group row">
@@ -112,8 +112,13 @@
                         -->
                     </form>
                 </div>
+                <div class="col" style="float: right">
+                    sadsadasdas
+                </div>
+                </div>
             </div>
         </div>
+        
     </div>
 </div>
 
