--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -15,7 +15,6 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/style.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
@@ -56,6 +55,7 @@
             <?php echo $this->layout()->content; ?>
         </div>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/moment.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/beneficio.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/pt-br.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
