--- a/application/views/scripts/apolice/index.phtml
+++ b/application/views/scripts/apolice/index.phtml
@@ -129,7 +129,7 @@
                                             </thead>
                                             <tbody>
                                                 <? foreach ($this->listaDosOnibusUrbanos as $onibus): ?>
-                                                <tr id="<?= $onibus['id'] ?>" itemtype="<?= $onibus['tipo'] ?>" class="<?= $onibus['tipo'] ?>">
+                                                    <tr id="<?= $onibus['id'] ?>" itemtype="<?= $onibus['tipo'] ?>" class="<?= $onibus['tipo'] ?>">
                                                         <td><?= $onibus['placa'] ?></td>
                                                         <td><?= $onibus['ano'] ?></td>
                                                         <td><?= $onibus['tipo'] ?></td>
@@ -155,6 +155,7 @@
                                 <th scope="col">Data de inicio</th>
                                 <th scope="col">Data de término</th>
                                 <th scope="col">Valor</th>
+                                <th scope="col">Ações</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -165,8 +166,42 @@
                                     <td><?= $apolice['data_inicio'] ?></td>
                                     <td><?= $apolice['data_fim'] ?></td>
                                     <td><?= $apolice['valor'] ?></td>
+                                    <td>
+                                        <a href="<?= '#myModal' . $apolice['id_apolice'] ?>" onclick="onibusPorIdApolice(<?=$apolice['id_apolice'] ?>)" class="btn btn-primary btn-labeled" data-toggle="modal">
+                                            <span class="btn-label">
+                                                <i class="fas fa-eye" style="color: white;"></i>
+                                            </span>
+                                            Visualizar Detalhes
+                                        </a>
+                                    </td>
                                 </tr>
-                            <? endforeach; ?>
+
+                                <!-- Modal -->
+                            <div class="modal fade" id="<?= 'myModal' . $apolice['id_apolice'] ?>" tabindex="-1" role="dialog">
+                                <div class="modal-dialog modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">Apólice</h4>
+                                            <button type="button" class="close" data-dismiss="modal">
+                                                <span>&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="container-fluid"> 
+                                                <div class="row">
+                                                    <? foreach ($this->listarOnibusPorIdApolice as $onibusApolice): ?>
+                                                    <?= $onibusApolice['placa'] ?><br>
+                                                    <?= $onibusApolice['PLACA'] ?>
+                                                     <? endforeach; ?>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Fim Modal -->
+
+                        <? endforeach; ?>
                         </tbody>
                     </table>
                 </div>
