--- a/application/views/scripts/apolice/index.phtml
+++ b/application/views/scripts/apolice/index.phtml
@@ -167,7 +167,7 @@
                                     <td><?= $apolice['data_fim'] ?></td>
                                     <td><?= $apolice['valor'] ?></td>
                                     <td>
-                                        <a  href="<?= '#myModal' . $apolice['id_apolice'] ?>" onclick="onibusPorIdApolice(<?=$apolice['id_apolice'] ?>)" class="btn btn-primary btn-labeled" data-toggle="modal" style="cursor: pointer;">
+                                        <a href="<?= $this->baseUrl('apolice/visualizar/id/' . $apolice['id_apolice']) ?>" class="btn btn-primary btn-labeled" style="cursor: pointer;">
                                             <span class="btn-label">
                                                 <i class="fas fa-eye" style="color: white;"></i>
                                             </span>
@@ -175,32 +175,6 @@
                                         </a>
                                     </td>
                                 </tr>
-
-                                <!-- Modal -->
-                            <div class="modal fade" id="<?= 'myModal' . $apolice['id_apolice'] ?>" tabindex="-1" role="dialog">
-                                <div class="modal-dialog modal-lg" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Apólice</h4>
-                                            <button type="button" class="close" data-dismiss="modal">
-                                                <span>&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="container-fluid"> 
-                                                <div class="row">
-                                                    <? foreach ($this->listarOnibusPorIdApolice as $onibusApolice): ?>
-                                                    <?= $onibusApolice['placa'] ?>
-                                                    <?= $onibusApolice["PLACA"] ?>
-                                                     <? endforeach; ?>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Fim Modal -->
-
                         <? endforeach; ?>
                         </tbody>
                     </table>
