--- a/application/views/scripts/beneficio/estudanteAprovado.phtml
+++ b/application/views/scripts/beneficio/estudanteAprovado.phtml
@@ -10,7 +10,7 @@
         <div class="col-lg-4">
             <div class="form-group">
                 <span id="box_icone_busca">
-                    <a href="<?= $this->baseUrl("beneficio/estudanteaprovado") ?>"> <button id="icone_busca" class="fa fa-search" > Aprovados </button></a>
+                    <a href="<?= $this->baseUrl("beneficio/estudante") ?>"> <button id="icone_busca" class="fa fa-search" > Pendentes </button></a>
                     <a href="<?= $this->baseUrl("beneficio/estudantereprovado") ?>"> <button id="icone_busca" class="fa fa-search" > Reprovados </button></a>
                     
                 </span>
