att data final após 1 ano da data de inicio

--- a/application/views/scripts/apolice/index.phtml
+++ b/application/views/scripts/apolice/index.phtml
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="col-lg-2">
                                     <label>Data de término:</label>
-                                    <input type="text" class="form-control datedropper" id="data_fim" data-format="d/m/Y" data-large-mode="true" data-large-default="true" data-lock="" data-translate-mode="true" data-lang="pt" data-theme="my-style" data-max-year="2020">
+                                    <input type="text" disabled="on" class="form-control datedropper" id="data_fim" data-format="d/m/Y" data-large-mode="true" data-large-default="true" data-lock="" data-translate-mode="true" data-lang="pt" data-theme="my-style" data-max-year="2020">
                                 </div>
                                 <div class="col-lg-2">
                                     <label>Valor:</label>
