--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -7,13 +7,22 @@
                 <li class="breadcrumb-item active" style="color: white;" aria-current="page">Estudantes</li>
             </ol>
         </div>
-        <div class="col-lg-4">
-            <div class="form-group">
-                <span id="box_icone_busca">
-                    <a href="<?= $this->baseUrl("beneficio/estudanteaprovado") ?>"> <button id="icone_busca" class="fa fa-search" > Aprovados </button></a>
-                    <a href="<?= $this->baseUrl("beneficio/estudantereprovado") ?>"> <button id="icone_busca" class="fa fa-search" > Reprovados </button></a>
-                    
-                </span>
+        <div class="col-lg-12">
+            <div class="form-group" formatar SomenteNumero cpf>
+                <a href="<?= $this->baseUrl("beneficio/estudante") ?>"> <button id="0" class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Pendentes </button></a>
+                <a href="<?= $this->baseUrl("beneficio/estudanteaprovado") ?>"> <button id="1" class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Aprovados </button></a>
+                <a href="<?= $this->baseUrl("beneficio/estudantereprovado") ?>"> <button id="2" class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Reprovados </button></a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" placeholder="Digite o CPF" class="btn btn-default" style="width:20%;"
+                       maxlength="14" onchange="validaCPF()" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
+                <a href=""> <button id="" class="btn btn-default" align="right">
+                        <i class="fas fa-search" style="color:black"></i>Buscar</button></a>           
             </div>
         </div>
 
