--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -9,24 +9,24 @@
         </div>
         <div class="col-lg-12">
             <div class="form-group" formatar SomenteNumero cpf>
-                <a href="<?= $this->baseUrl("beneficio/estudante") ?>"> <button id="0" class="btn btn-default">
+                <a href="<?= $this->baseUrl("beneficio/estudante") ?>"> <button class="btn btn-default">
                         <i class="fas fa-search" style="color:black"></i> Pendentes </button></a>
-                <a href="<?= $this->baseUrl("beneficio/estudanteaprovado") ?>"> <button id="1" class="btn btn-default">
+                <a href="<?= $this->baseUrl("beneficio/estudante?tipo=1") ?>"> <button class="btn btn-default">
                         <i class="fas fa-search" style="color:black"></i> Aprovados </button></a>
-                <a href="<?= $this->baseUrl("beneficio/estudantereprovado") ?>"> <button id="2" class="btn btn-default">
+                <a href="<?= $this->baseUrl("beneficio/estudante?tipo=2") ?>"> <button class="btn btn-default">
                         <i class="fas fa-search" style="color:black"></i> Reprovados </button></a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <input type="text" placeholder="Digite o CPF" class="btn btn-default" style="width:20%;"
+                <input type="text" placeholder="Digite o CPF" id="buscaCpf" name="buscaCpf" class="btn btn-default" style="width:20%;"
                        maxlength="14" onchange="validaCPF()" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
-                <a href=""> <button id="" class="btn btn-default" align="right">
-                        <i class="fas fa-search" style="color:black"></i>Buscar</button></a>           
-            </div>
+                <button class="btn btn-default" align="right" onclick="window.location.href = 'estudante' + '?cpf=' + buscaCpf.value">
+                    <i class="fas fa-search" style="color:black"></i>Buscar</button>           
+            </div>      
         </div>
 
-        <div class="col-lg-12">
+        <div class="col-lg-12" inner>
             <table class="table text-center" style="background-color:rgba(0,0,0,0.5); color: white">
                 <tr class="text-primary">
                     <th colspan="4">
