--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -1,124 +1,196 @@
-<div class="container">
-    <div class="row">
-        <!-- Div para o link de caminho! -->
-        <div class="col-lg-12" style="padding: 0px;">
-            <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
-                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
-                <li class="breadcrumb-item active" style="color: white;" aria-current="page">Motoristas</li>
-            </ol>
-        </div>
-        <!-- Div para o corpo da página! -->
-        <div class="col-lg-12" style="padding: 0px;">
-            <div class="card" style="background-color:rgba(0,0,0,0.5);">
-                <div class="container labelsForm">
-                    <form>
-                        <!-- Conjunto de divs-linha para cada campo do form-->
-                        <div class="col">
-                        <h6>Do cargo</h6>
-                        <Center>    
-                        <div class="form-group row">
-                            <label for="example-search-input" class="col-2 col-form-label">Cargo</label>
-                            <div class="col-xs-9">
-                                <select class="custom-select" id="inputGroupSelect01" required>
-                                    <option selected label="Selecione um cargo." disabled></option>
-                                    <option value="1">Administrador Local</option>
-                                    <option value="2">Administrador Local</option>
-                                    <option value="3">Cobrador</option>
-                                    <option value="4">Gerente de Recursos Humanos</option>
-                                    <option value="5">Motorista</option>
-                                    <option value="6">Secretário</option>
-                                    <option value="7">Vendedor</option>
-                                </select>
+<div class="col-lg-12" style="padding: 0px;">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="background-color:rgba(0,0,0,0.5);">
+                    <div class="container labelsForm">
+                        <form>
+                            <Center> 
+                            <!-- Conjunto de divs-linha para cada campo do form-->                      
+                            <h6>Do cargo</h6> 
+                            <div class="form-group form-control-sm row">
+                                <label for="example-search-input" class="col-6 col-form-label">Cargo</label>
+                                <div class="col-xs-9">
+                                    <select class="custom-select" id="inputGroupSelect01" required>
+                                        <option selected label="Selecione um cargo." disabled></option>
+                                        <option value="1">Administrador Local</option>
+                                        <option value="2">Administrador Local</option>
+                                        <option value="3">Cobrador</option>
+                                        <option value="4">Gerente de Recursos Humanos</option>
+                                        <option value="5">Motorista</option>
+                                        <option value="6">Secretário</option>
+                                        <option value="7">Vendedor</option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">Salario</label>
-                            <div class="col-xs-9">
-                                <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Salario</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="" required>
+                                </div>
                             </div>
-                        </div>
-                        </Center>
-                        <h6>Do funcionário</h6>
-                        <Center>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">Nome</label>
-                            <div class="col-xs-9">
-                                <input class="form-control" type="text" placeholder="Digite o nome" id="" required>
+                                         
+                            <h6>Do funcionário</h6>
+                            
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Nome</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="text" placeholder="Digite o nome" id="" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">Data de Nascimento</label>
-                            <div class="col-xs-9">
-                                <input type="date" name="data" id="data" class="form-control" placeholder="dd/mm/aaaa" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Data de Nascimento</label>
+                                <div class="col-xs-9">
+                                    <input type="date" name="data" id="data" class="form-control" placeholder="dd/mm/aaaa" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">CPF</label>
-                            <div class="col-xs-9">
-                            <input type="text" name="cpf" id="cpf" placeholder="XXX.XXX.XXX-XX" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">CPF</label>
+                                <div class="col-xs-9">
+                                <input type="text" name="cpf" id="cpf" placeholder="XXX.XXX.XXX-XX" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">RG</label>
-                            <div class="col-xs-9">
-                            <input type="text" name="rge" id="rg" placeholder="XXXXXXXXXX" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">RG</label>
+                                <div class="col-xs-9">
+                                <input type="text" name="rge" id="rg" placeholder="XXXXXXXXXX" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">CTPS</label>
-                            <div class="col-xs-9">
-                                <input type="text" name="ctps" id="ctps" placeholder="Número Série UF" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">CTPS</label>
+                                <div class="col-xs-9">
+                                    <input type="text" name="ctps" id="ctps" placeholder="Número Série UF" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">PIS</label>
-                            <div class="col-xs-9">
-                                <input type="text" name="pis" id="pis" placeholder="XXX.XXXXX.XX-X" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">PIS</label>
+                                <div class="col-xs-9">
+                                    <input type="text" name="pis" id="pis" placeholder="XXX.XXXXX.XX-X" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">CNH</label>
-                            <div class="col-xs-9">
-                                <input type="text" name="cnh" id="cnh" placeholder="XXXXXXXXXXX" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">CNH</label>
+                                <div class="col-xs-9">
+                                    <input type="text" name="cnh" id="cnh" placeholder="XXXXXXXXXXX" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">Telefone</label>
-                            <div class="col-xs-9">
-                                <input type="text" name="telefone" id="telefone" placeholder="(XX)XXXXX-XXXX"class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Telefone</label>
+                                <div class="col-xs-9">
+                                    <input type="text" name="telefone" id="telefone" placeholder="(XX)XXXXX-XXXX"class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">E-mail</label>
-                            <div class="col-xs-9">
-                                <input type="text" name="email" id="email" placeholder="nome@mail.com" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">E-mail</label>
+                                <div class="col-xs-9">
+                                    <input type="text" name="email" id="email" placeholder="nome@mail.com" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-2 col-form-label">Data de Admissão</label>
-                            <div class="col-xs-9">
-                                <input type="date" name="dataAdmissao" id="dataAdmissao" placeholder="dd/mm/aaaa" class="form-control" required>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Data de Admissão</label>
+                                <div class="col-xs-9">
+                                    <input type="date" name="dataAdmissao" id="dataAdmissao" placeholder="dd/mm/aaaa" class="form-control" required>
+                                </div>
                             </div>
-                        </div>
-                        </Center>
-
-                        <!-- Div do botão!
-                        <div class="form-group row">
-                            <div class="offset-xs-3 col-xs-9">
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </div>
-                        </div>
-                        -->
-                    </form>
-                </div>
-                <div class="col" style="float: right">
-                    sadsadasdas
-                </div>
+                            <!-- Div do botão!
+                            <div class="form-group row">
+                                <div class="offset-xs-3 col-xs-9">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div> -->
+                            </Center>
+                        
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="col">
+                <div class="card" style="background-color:rgba(0,0,0,0.5);">
+                    <div class="container labelsForm">
+                        
+                            <Center> 
+                            <!-- Conjunto de divs-linha para cada campo do form-->
+                            <h6></h6>                          
+                            <div class="form-group form-control-sm row">
+                                <label for="example-search-input" class="col-6 col-form-label">Cidade</label>
+                                <div class="col-xs-9">
+                                    <select class="custom-select" id="inputGroupSelect01" required>
+                                        <option selected label="Selecione um cargo." disabled></option>
+                                        <option value="1">Administrador Local</option>
+                                        <option value="2">Administrador Local</option>
+                                        <option value="3">Cobrador</option>
+                                        <option value="4">Gerente de Recursos Humanos</option>
+                                        <option value="5">Motorista</option>
+                                        <option value="6">Secretário</option>
+                                        <option value="7">Vendedor</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Endereço</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="text" placeholder="Digite o nome" id="" required>
+                                </div>
+                            </div>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Numero da casa</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="" required>
+                                </div>
+                            </div>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Bairro</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="text" placeholder="Digite o nome" id="" required>
+                                </div>
+                            </div>
+
+                            <h6>Do acesso</h6>
+
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Nome de usuário</label>
+                                <div class="col-xs-9">
+                                    <input class="form-control" type="text" placeholder="Digite o nome" id="" required>
+                                </div>
+                            </div>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Senha</label>
+                                <div class="col-xs-9">
+                                <input type="password" name="pass" id="pass" placeholder="Sua senha" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-group form-control-sm row">
+                                <label class="col-6 col-form-label">Confirme a senha</label>
+                                <div class="col-xs-9">
+                                <input type="password" name="pass" id="pass" placeholder="Sua senha denovo" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <button type="submit" class="btn btn-success btn-sm btn-block">Pronto</button>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button type="submit" class="btn btn-warning btn-sm btn-block">Voltar</button> 
+                                </div>
+                            </div>
+                            
+                            <!-- Div do botão!
+                            <div class="form-group row">
+                                <div class="offset-xs-3 col-xs-9">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div> -->
+                            
+                            </Center>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        <!-- Div para o corpo da página! -->
         
+
+            
+        </div>
     </div>
 </div>
 
